--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Layout Example 1</title>
+	<link rel="stylesheet" type="text/css" href="./css/reset.css">
+	<link rel="stylesheet" type="text/css" href="./css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="./css/master.css">
 </head>
 <body>
-	
+	<div class="main-wrapper">
 	<!-- Header -->
 	<header>
 		<div class="header-wrapper">
@@ -19,6 +21,7 @@
 			</div>		
 		</div>
 	</header>
+	<hr width="960px">
 	<!-- end of Header -->
 	
 	<main>
@@ -112,5 +115,6 @@
 		</div>
 	</footer>
 	<!-- end of Footer -->
+	</div>
 </body>
 </html>
