--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<div class="block1 grey"></div>
 			<div class="block2 grey"></div>
 			<div class="block3 grey">
-				<p>+7 (499) 346-21-31
-				manager@pixelplus.ru
+				<p>+7 (499) 346-21-31<br />
+				manager@pixelplus.ru<br />
 				www.pixelplus.ru</p>
 			</div>		
 		</div>
