Flex Flex Flex!

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 	
 	<main>
 		<!-- Content -->
-		<content>
+		<section>
 			<div class="content-wrapper">
 				<!-- Block 5 -->
 				<div class="block5 greylight">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
 					<ul class="list">
-						<li class="list-item">number - </li>
-						<li class="list-item">text - </li>
-						<li class="list-item">head - </li>
-						<li class="list-item">content - </li>
+						<li class="list-item">number - Lorem ipsum dolor sit amet, consectetur adipisicing elit, tempor </li>
+						<li class="list-item">text - Lorem ipsum dolor sit amet, consectetur adipisicing tempor </li>
+						<li class="list-item">head - Lorem ipsum dolor sit amet, consectetur tempor </li>
+						<li class="list-item">content - Lorem ipsum dolor sit amet, tempor </li>
 					</ul>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
 				</div>
 				<!-- end of Block 5 -->
 				<!-- Block 6 -->
@@ -61,7 +61,7 @@
 					</div>
 				</div>
 			</div>
-		</content>
+		</section	>
 		<!-- end of Content -->
 		<aside>
 			<div class="block4 grey">
