--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="block7 grey"></div>
 		</aside>
 	</main>
-	
+	<hr width="100%">
 	<!-- Footer -->
 	<footer>
 		<div class="footer-wrapper">
