--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 		</section	>
 		<!-- end of Content -->
-		<aside>
+		<aside class="aside">
 			<div class="block4 grey">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -116,5 +116,6 @@
 	</footer>
 	<!-- end of Footer -->
 	</div>
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
